# oil-kzt-monitor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docker/grafana/dashboards/: oil-kzt-monitor.json
docker/grafana/provisioning/datasources/: timescaledb.yaml
docker/timescaledb/init-sql/: 03_hypertables.sql
src/analytics/: align_bars.py  compute_metrics.py  detect_anomalies.py
src/common/: schemas.py
src/ml/: train_models.py
src/producers/: fetch_corpus.py  live_producer.py  replay_producer.py
src/streaming/: ingest_job.py
