[project]
name = "oil-kzt-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.6",
    "lxml>=5.0",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "pyarrow>=17.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.6",
]
